pingpong/deploy/ping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pingpong
  name: ping
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
      - name: ping
        image: eu.gcr.io/lia2-2023-385111/joakim/ping:v0.0.3
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
