pingpong/deploy/ping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping
  namespace: pingpong
spec:
  selector:
    app: ping
  ports:
    - protocol: TCP
      port: 8080
